fix: handle HTTP/2 pipeline correctly